[gd_scene load_steps=4 format=3 uid="uid://cw1161nbagqaj"]

[ext_resource type="Script" uid="uid://c21eax2vvprym" path="res://scenes/main_menu.gd" id="1_l6cm7"]
[ext_resource type="Script" uid="uid://bux7m32gsy8f3" path="res://scenes/main_menu_button.gd" id="2_ekxnf"]

[sub_resource type="LabelSettings" id="LabelSettings_vue75"]
font_size = 48

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_l6cm7")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
offset_right = 319.0
offset_bottom = 115.0
theme_override_constants/margin_left = 48
theme_override_constants/margin_top = 48
theme_override_constants/margin_right = 48
theme_override_constants/margin_bottom = 48

[node name="TimeIndicator" type="Label" parent="MarginContainer"]
layout_mode = 2
text = "Day 1 - 9am"
label_settings = SubResource("LabelSettings_vue75")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
custom_minimum_size = Vector2(960, 1080)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 438.0
grow_horizontal = 0
grow_vertical = 2
theme_override_constants/separation = 20
alignment = 1

[node name="Synthesize" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 72
text = "Synthesize"
script = ExtResource("2_ekxnf")

[node name="Farm" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 72
text = "Farm"

[node name="Upgrade" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 72
text = "Upgrade"

[node name="Items" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 72
text = "Items"

[node name="Status" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 72
text = "Status"

[node name="Adventurers" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 72
text = "Adventurers"

[node name="Visitor" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 72
text = "Wait for visitor"

[connection signal="button_down" from="VBoxContainer/Synthesize" to="." method="_on_synthesize_button_down"]
[connection signal="button_down" from="VBoxContainer/Synthesize" to="VBoxContainer/Synthesize" method="_on_button_down"]
[connection signal="button_down" from="VBoxContainer/Farm" to="." method="_on_farm_button_down"]
[connection signal="button_down" from="VBoxContainer/Upgrade" to="." method="_on_upgrade_button_down"]
[connection signal="button_down" from="VBoxContainer/Items" to="." method="_on_items_button_down"]
[connection signal="button_down" from="VBoxContainer/Status" to="." method="_on_status_button_down"]
[connection signal="button_down" from="VBoxContainer/Adventurers" to="." method="_on_adventurers_button_down"]
[connection signal="button_down" from="VBoxContainer/Visitor" to="." method="_on_visitor_button_down"]
